--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-04-30 07:35+0200\n"
+"POT-Creation-Date: 2025-05-14 12:47+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -1327,6 +1327,12 @@ msgstr "Informations publiques supplémentaires à propos de cette semaine"
 
 msgid "Tag"
 msgstr "Étiquette"
+
+msgid "Starting at"
+msgstr "Commençant à"
+
+msgid "Ending at"
+msgstr "Finissant à"
 
 msgid "I am looking to make a reservation lasting"
 msgstr "Je cherche à faire une réservation d'une durée de"
@@ -3326,6 +3332,22 @@ msgstr "Modifier votre envoi"
 msgid "Key Code"
 msgstr "Code clé"
 
+msgid "Reject"
+msgstr "Refuser"
+
+msgid "Do you really want to reject this reservation?"
+msgstr "Voulez-vous vraiment refuser cette réservation?"
+
+#, python-format
+msgid "Rejecting ${title} can't be undone."
+msgstr "Refuser ${title} est irréversible."
+
+msgid "Reject reservation"
+msgstr "Refuser la réservation"
+
+msgid "Adjust"
+msgstr "Ajuster"
+
 msgid "Accept all reservations"
 msgstr "Accepter toutes les réservations"
 
@@ -3353,22 +3375,8 @@ msgstr "Refuser les réservations"
 msgid "Reject all with message"
 msgstr "Tout refuser avec message"
 
-#, python-format
-msgid "Reject ${title}"
-msgstr "Refuser ${title}"
-
-msgid "Do you really want to reject this reservation?"
-msgstr "Voulez-vous vraiment refuser cette réservation ?"
-
-#, python-format
-msgid "Rejecting ${title} can't be undone."
-msgstr "Refuser ${title} est irréversible."
-
-msgid "Reject reservation"
-msgstr "Refuser la réservation"
-
-#. Used in sentence: "${event} published."
 #.
+#. Used in sentence: "${event} published."
 msgid "Event"
 msgstr "Événement"
 
@@ -3744,8 +3752,8 @@ msgid ""
 "than the number of levels in the breadcrumbs."
 msgstr ""
 "Pour afficher le fil d'Ariane, vous pouvez ajouter ${bc_level} comme "
-"paramètre à l'URL. Le nombre définit où le fil d'Ariane commence. 1 dans ce "
-" cas signifie que le premier niveau est masqué. Vous pouvez utiliser "
+"paramètre à l'URL. Le nombre définit où le fil d'Ariane commence. 1 dans ce  "
+"cas signifie que le premier niveau est masqué. Vous pouvez utiliser "
 "n'importe quel nombre tant qu'il est inférieur au nombre de niveaux dans le "
 "fil d'Ariane."
 
@@ -3755,8 +3763,8 @@ msgid ""
 "filled-out form."
 msgstr ""
 "Veuillez vérifier vos données et appuyez sur « Compléter » pour finaliser le "
-"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur « "
-"Modifier » pour retourner sur le formulaire complété."
+"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur "
+"« Modifier » pour retourner sur le formulaire complété."
 
 msgid ""
 "The image shown in the list view is a square. To have your image shown fully "
@@ -4701,6 +4709,9 @@ msgstr "1 réservation rejetée."
 
 msgid "${count} reservations rejected."
 msgstr "${count} réservations rejetées."
+
+msgid "1 reservation adjusted:"
+msgstr "1 réservation ajustée:"
 
 msgid "Registration confirmed."
 msgstr "Inscription confirmée."
@@ -6438,6 +6449,18 @@ msgstr ""
 
 msgid "Reject all reservations with message"
 msgstr "Refuser toutes les réservations avec le message"
+
+msgid "Adjust reservation"
+msgstr "Ajuster la réservation"
+
+msgid "One of your reservations was adjusted"
+msgstr "Une de vos réservations a été ajustée"
+
+msgid "The reservation was adjusted"
+msgstr "La réservation a été ajustée"
+
+msgid "The reservation was left unchanged"
+msgstr "La réservation est restée inchangée"
 
 msgid "Added a new daypass"
 msgstr "Nouvel abonnement à la journée ajouté"
