--- a/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/it_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2025-07-02 14:11+0200\n"
+"POT-Creation-Date: 2025-07-03 09:03+0200\n"
 "PO-Revision-Date: 2022-03-15 10:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -2554,6 +2554,9 @@ msgid ""
 msgstr ""
 "Si tratta del tasso di IVA in percentuale. Il tasso di IVA si applicherà a "
 "tutti i prezzi nei moduli."
+
+msgid "Enable Citizen Login"
+msgstr "Abilitare l'accesso del cittadino"
 
 msgid ""
 "Select newsletter categories your are interested in. You will receive the "
