--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-07-02 14:13+0200\n"
+"POT-Creation-Date: 2025-07-03 09:15+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: German\n"
@@ -699,7 +699,7 @@ msgid "Login"
 msgstr "Anmelden"
 
 msgid "Citizen Login"
-msgstr "Bürger-Login"
+msgstr "Kunden-Login"
 
 msgid "About"
 msgstr "Impressum"
