--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-07-16 11:39+0200\n"
+"POT-Creation-Date: 2025-07-16 13:06+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: German\n"
@@ -301,8 +301,8 @@ msgstr "Parlamentarierinnen und Parlamentarier"
 msgid "Parliamentarian"
 msgstr "Parlamentarier:in"
 
-msgid "Role (as a party or group member)"
-msgstr "Rolle (als Partei- oder Fraktionsmitglied)"
+msgid "Role (as a group member)"
+msgstr "Rolle (als Fraktionsmitglied)"
 
 msgid "Edit"
 msgstr "Bearbeiten"
