--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-07-17 14:55+0200\n"
+"POT-Creation-Date: 2025-07-21 08:00+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: German\n"
@@ -2017,6 +2017,9 @@ msgstr "Es wurden noch keine politischen Geschäfte erfasst."
 
 msgid "Datum"
 msgstr "Datum"
+
+msgid "Year"
+msgstr "Jahr"
 
 msgid "No publications"
 msgstr "Keine Publikationen"
