--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-07-17 14:55+0200\n"
+"POT-Creation-Date: 2025-07-21 08:00+0200\n"
 "PO-Revision-Date: 2021-03-03 14:04+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: French\n"
@@ -1757,6 +1757,9 @@ msgstr "Souscrire à la lettre d'informations"
 
 msgid "Receive the newsletter by email"
 msgstr "Recevoir la lettre d'informations par e-mail"
+
+msgid "Year"
+msgstr "Année"
 
 msgid "Years"
 msgstr "Années"
