--- a/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
+++ b/src/onegov/pas/locale/de_CH/LC_MESSAGES/onegov.pas.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-07-15 15:59+0200\n"
+"POT-Creation-Date: 2025-07-22 11:30+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Language-Team: German\n"
 "Language: de_CH\n"
@@ -86,7 +86,9 @@ msgid "Validate JSON Schema"
 msgstr "JSON Validieren"
 
 msgid "Check if the uploaded JSON files match the expected structure."
-msgstr "Überprüfen, ob die hochgeladenen JSON-Dateien der erwarteten Struktur entsprechen."
+msgstr ""
+"Überprüfen, ob die hochgeladenen JSON-Dateien der erwarteten Struktur "
+"entsprechen."
 
 #, python-format
 msgid "File ${name} is missing the \"results\" list."
@@ -638,6 +640,9 @@ msgstr "Neue Sätze"
 msgid "The rate set was copied."
 msgstr "Der Satz wurde kopiert"
 
+msgid "Copy"
+msgstr "Kopieren"
+
 msgid "Added a new settlement run"
 msgstr "Neuer Abrechnungslauf hinzugefügt"
 
@@ -671,8 +676,8 @@ msgstr "Total Alle Parteien"
 #~ msgid "Clone"
 #~ msgstr "Klonen"
 
-#~ msgid "Copy rate set"
-#~ msgstr "Satz klonen"
+msgid "Copy rate set"
+msgstr "Satz kopieren"
 
 #~ msgid "Basic properties"
 #~ msgstr "Grundeigenschaften"
